--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
-.cabecalho {
+.logo {
     background-color: #424E61;
     color: white;
     display: flex;
