--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body, html {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #ee0c0c;
+    background-color:#000000;
     padding-top: 20px;
 }
 
