--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body, html {
 /* Estilos para as seções */
 .content section {
     margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #0e0909;
 }
 
 .content section:last-child {
