--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body, html {
 
 
 
-.content {
+.content a {
     margin-left: 400px; /* Ajuste conforme a largura da sidebar */
     padding: 30px;
 }
